tests/rosetta/transpiler/erl/faces-from-a-mesh-2.error
exit status 127
/workspace/mochi/tests/rosetta/transpiler/erl/faces-from-a-mesh-2.erl:176:17: syntax error before: '}'
escript: There were compilation errors.
